# sandbox

./: .gitignore  CMakeLists.txt  CMakeLists.txt_  cheatsheet_command.md  cheatsheet_gst.md  conanfile.py  meson.build  meson.build_
.devcontainer/: devcontainer.json
.dvc/: config
apriltag/: CMakeLists.txt
c/: CMakeLists.txt
c/test/: CMakeLists.txt  c11_test.c
cmake/: FindDeepstreamAppCommon.cmake  FindGStreamer.cmake  FindMIVISIONX.cmake  FindNVDS.cmake
cpp/: CMakeLists.txt
cpp/fixed_point/: CMakeLists.txt  fx2float.cpp
cpp/test/: CMakeLists.txt  cpp_test.cpp  event_test.cpp  modern_file.cpp  modern_time.cpp
cpp/threads_affinity/: CMakeLists.txt  launch_thread_per_cpu.cpp  launch_threads_report_cpu.cpp  set_affinity.cpp  thread_id_native_handle.cpp  thread_workload_benchmark.cpp
cuda/: CMakeLists.txt
cuda/cuSolverDn_LinearSolver/: CMakeLists.txt  batchQR_example.cpp  cuSolverDn_LinearSolver.cpp  gesvdjbatch_example.cpp  helper_cusolver.h  ormqr_example.cpp  triangulation.cu  triangulation_cu.h
cuda/test/: CMakeLists.txt  add_kernel.cu  add_kernel.h  cuda_test.cpp
data/: .gitignore  deepstream.dvc  kitti.dvc
deepstream/: CMakeLists.txt
deepstream/deepstream-app/: CMakeLists.txt  README.md  deepstream_app.c  deepstream_app_config_parser.c
deepstream/deepstream-test1/: CMakeLists.txt  README.md  deepstream_test1_app.c  deepstream_test1_app_cam.c
deepstream/deepstream-test1/config/: dstest1_config.yml  dstest1_pgie_config.yml
deepstream/nvdsinfer_custom_impl_Yolo/: CMakeLists.txt  yolo.cpp
deepstream/nvdsinfer_custom_impl_Yolo/config/: config_infer_primary_yoloV8.yml  deepstream_app_config_yolo8.yml  sources_cam.csv
deepstream/nvdsinfer_custom_impl_Yolo_seg/: CMakeLists.txt  config_infer_primary_yolo11_seg.yml  nvdsparseseg_Yolo.cpp  readme.md
deepstream/nvdsinfer_custom_impl_Yolo_seg/trt_plugins/: common.h
dmabuf/: CMakeLists.txt
dmabuf/dma-buf-texture-sharing/: main.c  meson.build
dmabuf/drm-v4l2-test/: CMakeLists.txt  dmabuf-sharing.c  dmabuf-sharing_.c  meson.build
dmabuf/drmtoy/: CMakeLists.txt
dmabuf/egl-dmabuf-camera/: egl_x11.c  engine.c  engine.h  main.c  meson.build
dmabuf/egl-dmabuf-camera/internal/: engine.h
dmabuf/gbm/: main.c
dmabuf/shctx/: CMakeLists.txt  main.c  meson.build  sdr.c
dmabuf/test/: CMakeLists.txt  dmabuf_heap_example.c  modeset-single-buffer.c  simple_dmabuf_userspace.c
dockerfile/: debian11_gcc  debian12_gcc  deepstream71  ubuntu20_gcc  ubuntu22_gcc
drm/drm-howto/: CMakeLists.txt  meson.build  modeset-atomic.c  modeset-vsync.c
drm/drmtoy/: CMakeLists.txt  kmsgrab.c  meson.build
drm/gbm/: CMakeLists.txt  egl-gbm-test.c  main.c  meson.build
drm/test/: CMakeLists.txt  modeset-atomic-crtc.c  modeset-atomic-plane.c  modeset-plane-test.c  modeset-single-buffer.c  planetest.c
egl/dma-buf-texture-sharing/: CMakeLists.txt
eigen/: CMakeLists.txt  eigen_test.cpp
gstreamer/: CMakeLists.txt
gstreamer/tutorial/: CMakeLists.txt  basic-tutorial-1.c  basic-tutorial-2.c  basic-tutorial-6.c  basic-tutorial-7.c
onnxruntime/test/: CMakeLists.txt  onnx_test.cpp
opencl/: CMakeLists.txt
opencl/OpenCL-Textbook-Code/: CMakeLists.txt  histogram.c  histogram.cl  image-convolution.cpp  meson.build
opencl/OpenCL-Textbook-Code/ImageConvolution/: image-convolution.cpp
opencl/OpenCL-Textbook-Code/Utils/: bmp-utils.c  bmp-utils.h  gold.c  gold.h
opencl/android-opencl-blur-release/: CMakeLists.txt  android_test.c  gaussian.c  readme-rk
opencl/local_thresh/: CMakeLists.txt  interp.c  local_thresh.cl  local_thresh.cpp  local_thresh.h  simple_image.c
opencl/marching_squares/: CMakeLists.txt  hp5.cpp  marching_squares.c  marching_squares.cl  marching_squares.h
opencl/matmul/: CMakeLists.txt  matmul.c  meson.build
opencl/test/: CMakeLists.txt  cl_test.c  meson.build
opencv/: CMakeLists.txt
opencv/denseflow/: CMakeLists.txt  blockmatch_flow.cpp  blockmatch_flow.h  blockmatch_px4_flow.cpp  blockmatch_px4_flow.h  brox_flow.cpp  brox_flow.h  farneback_flow.cpp  farneback_flow.h  flow_functions.cpp  flow_functions.h  px4flow.cpp  px4flow.hpp
opencv/ocl_interop/: CMakeLists.txt  cv_ocl_test.cpp  cv_para_test.cpp  opencl-gaussian-buf.cpp  opencl-gaussian.cpp  opencl-histogram.cpp  opencl-maxloc.cpp  opencl-opencv-interop.cpp  optical_flow.cpp  test_maxlocvec.cl
opencv/stereo/: CMakeLists.txt  disparity_filtering.cpp  kitti_stereo_stereo.cpp  stereo.cpp
opencv/test/: CMakeLists.txt  cv_nv12_test.cpp  cv_scale.cpp  cv_test.cpp  cv_test_ppm.cpp  cv_video.cpp  find_obj.cpp  find_obj_queue.cpp  meson.build  opencl-gaussian-buf.cpp  opencl-gaussian.cpp  opencl-histogram.cpp  opencl-isolate.cpp  opencl-maxloc-vec.cpp  opencl-maxloc.cpp  opencl-opencv-interop.cpp  opencl-threshold.cpp  test_kernels.cl  test_maxlocvec.cl
openmp/: CMakeLists.txt
openmp/fast_software_implementation/: CMakeLists.txt  example_SIMD.c  matrix_mult.h  matrix_mult_openmp_simd.c
openmp/test/: CMakeLists.txt  omp_test.c  thread_pool_test.cpp  thread_safe_test.c  vec_add.c
openssl/: CMakeLists.txt
openssl/aes/: CMakeLists.txt  main_decrypt.cpp
openvx/: CMakeLists.txt
openvx/bubble-pop/: CMakeLists.txt
openvx/bubble-pop/src/: AMD_VX_Pop_Bubble.cpp  AMD_VX_Pop_Donut.cpp  AMD_app.cpp
openvx/test/: CMakeLists.txt  canny.cpp  optical_flow.cpp
profiles/: ax650  cv2  cv28  cv72  rk3588  rk3588s
sandbox/: CMakeLists.txt  cheatsheet_amba.md  cheatsheet_command.md  cheatsheet_gst.md
sandbox/opencv/test/: CMakeLists.txt  cv_yuv.cpp  opencl-opencv-interop_.cpp
script/: cv2_vin0_1_1080p_for_pip.lua  cv2_vin2_1080p_stereo.lua  cv2_vin2_720p_stereo.lua  genP.py  gpu.sh  printFPS.py  printLog.py  printPrimitives.py  print_in_bin.py  print_out_bin.py  temprecord.py  temprecord.sh  udp_test.py
vpi/: CMakeLists.txt
vpi/11-fisheye/: CMakeLists.txt  main.cpp  main.py  undistort.cpp
vpi/samples/: CMakeLists.txt  optflow_dense.cpp  vpi_blur.cpp  vpi_blur.py
zlib/: CMakeLists.txt
zlib/test/: CMakeLists.txt
