if(OpenCL_FOUND)
message(STATUS "  OpenCL:               ${OpenCL_FOUND}"                                )
add_subdirectory 		(test)
# add_subdirectory 		(Exercises/Exercise01/C)
# add_subdirectory 		(Solutions/Exercise04/C)
# add_subdirectory 		(Solutions/Exercise05/C)
# add_subdirectory 		(Solutions/Exercise08/C)
# add_subdirectory 		(Solutions/Exercise09/C)
# add_subdirectory 		(Ch11/bsort)
# add_subdirectory 		(Ch11/string_search)
# add_subdirectory 		(Ch7/atomic)
# add_subdirectory 		(Ch14/fft)
# add_subdirectory 		(android-opencl-blur-release)
add_subdirectory 		(matmul)
# add_subdirectory 		(marching_squares)
# add_subdirectory 		(local_thresh)
add_subdirectory 		(OpenCL-Textbook-Code)
endif()

