if(OpenCV_FOUND)
message(STATUS "  OpenCV:               ${OpenCV_FOUND}"                                )
add_subdirectory 		(test)
add_subdirectory 		(stereo)
# add_subdirectory 		(ocl_interop)
# add_subdirectory 		(dist)
# add_subdirectory 		(warpCamera)
# add_subdirectory 		(thresholding)
# add_subdirectory 		(contours)
# add_subdirectory 		(dahua_camera)
# add_subdirectory 		(camera)
# add_subdirectory 		(calibration)
# add_subdirectory 		(stitch_test)
# add_subdirectory 		(denseflow)
# add_subdirectory 		(feature_detect)
# add_subdirectory 		(frozenGraph)
# add_subdirectory 		(dnn_test)
# add_subdirectory 		(aruco)
# add_subdirectory 		(maskImage)
endif()

