dep_common = [dep_drm]

executable(
    'modeset-atomic',
    files(
      'modeset-atomic.c',
    ),
    dependencies: dep_common,
    install: true,
)

executable(
    'modeset-double-buffered',
    files(
      'modeset-double-buffered.c',
    ),
    dependencies: dep_common,
    install: true,
)

executable(
    'modeset-vsync',
    files(
      'modeset-vsync.c',
    ),
    dependencies: dep_common,
    install: true,
)

executable(
    'modeset',
    files(
      'modeset.c',
    ),
    dependencies: dep_common,
    install: true,
)