add_executable			( basic-tutorial-1 basic-tutorial-1.c )
target_link_libraries 	( basic-tutorial-1 PkgConfig::GSTREAMER )

add_executable			( basic-tutorial-2 basic-tutorial-2.c )
target_link_libraries 	( basic-tutorial-2 PkgConfig::GSTREAMER )

add_executable			( basic-tutorial-3 basic-tutorial-3.c )
target_link_libraries 	( basic-tutorial-3 PkgConfig::GSTREAMER )

add_executable			( basic-tutorial-6 basic-tutorial-6.c )
target_link_libraries 	( basic-tutorial-6 PkgConfig::GSTREAMER )

add_executable			( basic-tutorial-7 basic-tutorial-7.c )
target_link_libraries 	( basic-tutorial-7 PkgConfig::GSTREAMER )

