dep_common = [dep_mali]

executable(
    'histogram',
    files(
      'histogram.c',
      'Utils/bmp-utils.c',
      'Utils/gold.c',
      'Utils/utils.c',
    ),
    dependencies: dep_common,
    install: true,
)

# executable(
#     'image-convolution',
#     files(
#       'image-convolution.cpp',
#       'Utils/bmp-utils.c',
#       'Utils/gold.c',
#       'Utils/utils.c',
#     ),
#     dependencies: dep_common,
#     install: true,
# )